Wed Aug  7 22:34:36 2002  Brian Gough  <bjg@network-theory.co.uk>

	* config.h.in: fixed RANGE_CHECK_ON to GSL_RANGE_CHECK_ON

Sun Jul 14 12:48:50 2002  Brian Gough  <bjg@network-theory.co.uk>

	* INSTALL: merged the MACHINES file into the installation notes.

Fri Jun 14 22:09:52 2002  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_types.h: define GSL_VAR macro as ANSI C 'export' or
 	'__declspec(dllexport/dllimport)' depending on platform

	* changed 'export' to GSL_VAR macro throughout to make it easier
 	to build nonstandard shared libraries such as DLLs

Sun May 19 22:24:00 2002  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: changed AM_PROG_LIBTOOL to AC_PROG_LIBTOOL,
	use AC_SEARCH_LIBS to find math library

Sat May 11 22:27:52 2002  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in (ac_cv_func_printf_longdouble): fixed ieee
 	comparisons test so it actually works
	(ac_cv_c_ieee_comparisons): added a test for denormalized values

Fri Apr 26 19:53:31 2002  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am (EXTRA_DIST): removed KNOWN-PROBLEMS

Sun Feb 10 21:28:29 2002  Brian Gough  <bjg@network-theory.co.uk>

	* BUGS: added a list of known but unfixed bugs.

2002-02-07  Mark Galassi  <rosalia@galassi.org>

	* THANKS: added Karsten Howes <karsten@videotron.ca>.

Wed Jan 16 16:55:25 2002  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in acconfig.h: check whether IEEE comparisons work for
 	Inf, NaN and define HAVE_IEEE_COMPARISONS

Tue Jan  8 21:38:23 2002  Brian Gough  <bjg@network-theory.co.uk>

	* config.h (GSL_RANGE_CHECK_OFF): turn off range checking when
 	building the library, still on by default when compiling user
 	applications

Mon Nov 19 21:40:30 2001  Brian Gough  <bjg@network-theory.co.uk>

	* standardised all files to #include <gsl/...> for exported header
 	files rather than having some as #include "...", to simplify build
 	procedure

Fri Oct 19 15:19:45 2001  Brian Gough  <bjg@network-theory.co.uk>
