@@ -1,3 +1,8 @@
+Fri Sep  6 15:00:40 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* acconfig.h (GSL_RANGE_CHECK_OFF): turned range checking off in
+ 	acconfig.h as it overwrites config.h.in
+
 Wed Aug  7 22:34:36 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* config.h.in: fixed RANGE_CHECK_ON to GSL_RANGE_CHECK_ON
